--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,67 @@
-matplotlib==3.6.2
-numpy==1.23.5
-Pillow==9.3.0
-tqdm==4.64.1
-wandb==0.13.5
+argcomplete==1.12.3
+bottle==0.12.20
+certifi==2022.12.7
+chardet==3.0.4
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+contourpy==1.1.0
+crcmod==1.7
+cycler==0.11.0
+dicom2nifti==2.4.8
+docker-pycreds==0.4.0
+docopt==0.6.2
 elasticdeform==0.5.0
+filelock==3.9.0
+fonttools==4.40.0
+fusepy==2.0.4
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
+indexed-gzip==1.6.3
+Jinja2==3.1.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.2
+marshmallow==2.15.1
+matplotlib==3.6.2
+mpmath==1.2.1
+networkx==3.0
+nibabel==5.1.0
+numpy==1.23.5
+packaging==23.1
+pathtools==0.1.2
+Pillow==9.3.0
+promise==2.3
+protobuf==4.23.3
+psutil==5.9.5
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydicom==2.4.0
+pymongo==3.13.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python-gdcm==3.0.22
+PyYAML==6.0
+ratarmountcore==0.3.2
+requests==2.28.1
+rsa==4.9
+scipy==1.10.1
+semver==3.0.0
+sentry-sdk==1.25.1
+setproctitle==1.3.2
+shortuuid==1.0.11
+six==1.16.0
+smmap==5.0.0
+SQLAlchemy==1.3.19
+sympy==1.11.1
+torch==2.0.1+cu117
+torchvision==0.15.2+cu117
+tqdm==4.64.1
+typing_extensions==4.4.0
+urllib3==1.26.13
+wandb==0.13.5
+watchdog==3.0.0
+websocket-client==1.5.1
+websockets==9.1
